--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "http-client": "^4.3.1",
+    "inspector": "^0.5.0",
     "store": "^2.0.12",
     "vue": "^2.6.10",
     "vue-resource": "^1.5.1",
